<resources>
    <string name="app_name">布草管理系统</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings</string>

    <string name="net_connect_error">网连接异常！</string>
    <string name="loading_data_from_net">数据加载中.....</string>
    <string name="submit_error">提交失败！！</string>
    <!--main activity-->
    <string name="main_exit_tip">再按一次退出系统</string>
    <string name="main_tb_title_manager">布草管理系统</string>
    <string name="main_tb_title_place_order">下单</string>
    <!--login-->
    <string name="hint_factory">工厂名</string>
    <string name="hint_username">用户名</string>
    <string name="hint_pwd">密码</string>
    <string name="hint_login_btn">登录</string>
    <string name="lg_input_empty_tip">输入存在空值！！</string>
    <string name="lg_factory_name_error">工厂名不正确！</string>
    <string name="lg_username_or_pwd_error">用户名或密码不正确！</string>
    <string name="lg_loading_tip">登录中... </string>
    <!--left drawer menu -->
    <string name="dw_menu_linen_manager">布草管理</string>
    <string name="dw_menu_place_order">发货</string>
    <string name="dw_menu_device_connect">设备连接</string>
    <string name="dw_menu_others">其它</string>
    <string name="dw_menu_exit">退出登录</string>
    <!--departments choice-->
    <string name="dep_choice_level1">请选择酒店：</string>
    <string name="dep_choice_level2">请选择要收布草得部门：</string>
    <!--device connect-->
    <string name="device_connected">设备已经连接了，快去使用吧！</string>
    <string name="device_bt_setting">蓝牙设置</string>
    <string name="device_print_disconnect">打印机未连接！</string>
    <string name="device_swing_ui_disconnect">手持机未连接！</string>
    <!--place order-->
    <string name="place_order">-------------发货单--------------</string>
    <string name="place_date">日期</string>
    <string name="place_user">收发员</string>
    <string name="place_type">类别：</string>
    <string name="place_num">数量：</string>
    <string name="place_customer_sign">客户签字________________________</string>
    <string name="place_arfid">--www.arfid.co(阿菲德洗涤系统)--</string>
    <string name="place_alter_title">结果</string>
    <string name="place_msg">发货成功！！！</string>
    <string name="place_btn_pos">继续发货</string>
    <string name="place_btn_neg">取消</string>
    <string name="place_choice_level1">请选择酒店：</string>
    <string name="place_submit">确认发货：</string>
    <!--type choice-->
    <string name="type_level1">您所在的酒店是：</string>
    <string name="type_level2">要收布草的部门为：</string>
    <string name="type_linen_type">选择要扫描的布草类型：</string>
    <string name="type_normal_linen">正常布草</string>
    <string name="type_special_linen">特殊洗涤</string>
    <string name="type_return_linen">返厂洗涤</string>
    <string name="type_stop_scan">终止扫描</string>
    <!--linen scan-->
    <string name="scan_linen_type">收货类型为：</string>
    <string name="scan_linen_type_normal">收货类型为：正常布草</string>
    <string name="scan_linen_type_special">收货类型为：特殊布草</string>
    <string name="scan_linen_type_return">收货类型为：返厂布草</string>
    <!--submit result activity-->
    <string name="useless_tag">无用标签的数量有：</string>
    <string name="out_of_range_tag">非本酒店的标签数为：</string>
    <string name="submit_order">-------------收货单--------------</string>
    <string name="submit_date">日期：</string>
    <string name="submit_user">收发员："</string>
    <string name="submit_level1">酒店：</string>
    <string name="submit_level2">部门：</string>
    <string name="submit_type">类别：</string>
    <string name="submit_num">数量：</string>
    <string name="submit_customer_sign">客户签字________________________</string>
    <string name="submit_arfid">--www.arfid.co(阿菲德洗涤系统)--</string>
    <string name="submit_alter_title">提交结果</string>
    <string name="submit_alter_msg">提交成功！！！</string>
    <string name="submit_alter_pos">继续扫描</string>
</resources>
